--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,4 @@
 3. 添加集成测试，在Winform、WPF、控制台中启动程序。
 4. Support multiple .NET versions
 https://learn.microsoft.com/en-us/nuget/create-packages/supporting-multiple-target-frameworks
+5. WaitForWindow等方法提供异步版本
